--- a/expenzo/templates/index.html
+++ b/expenzo/templates/index.html
@@ -1,7 +1,16 @@
-{% block title %}
-    Welcome to Expenzo
-{% endblock %}
+{% extends 'base.html' %}
+{% load i18n %}
 
 {% block content %}
-    Helps you to keep track your money
-{% endclock %}
+<h1 class="my-4"></h1>
+
+<h1 class="my-4"></h1>
+<div class="card">
+<div class="card-body p-5 bg-light">
+<div class="display-4">{% trans "Hello from Expenzo!" %}</div>
+<p class="lead">{% trans "It helps you to keep track your money" %}</p>
+<hr>
+<a class="btn btn-primary btn-lg" href="#">{% trans "Expenzo bot" %}</a>
+</div>
+</div>
+{% endblock %}
