--- a/expenzo/templates/base.html
+++ b/expenzo/templates/base.html
@@ -5,76 +5,86 @@
 {% bootstrap_javascript %}
 
 <!DOCTYPE html>
-<html lang="{{ LANGUAGE_CODE}}">
+<html lang="{{ LANGUAGE_CODE }}">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% trans "Task Manager Hexlet" %}</title>
+    <title>{% trans "Expenzo" %}</title>
     <link rel="icon" href="{% static 'images/favicon.ico' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
+
   <body class="d-flex flex-column min-vh-100">
+  {% bootstrap_messages %}
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">{% trans "Expenzo" %}</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarContent">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">{% trans "Expenzo" %}</a>
 
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#">{% trans "Users" %}</a>
-            </li>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="#">{% trans "Categories" %}</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">{% trans "Statistics" %}</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">{% trans "Expenses" %}</a>
-            </li>
-            {% endif %}
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#">{% trans "Users" %}</a>
+          </li>
 
-            {% if user.is_authenticated %}
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="#">{% trans "Statistics" %}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">{% trans "Expenses" %}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">{% trans "Something else" %}</a>
+          </li>
+          {% endif %}
+        </ul>
 
+        {% if user.is_authenticated %}
+        <div class="d-flex align-items-center ms-auto">
+          <span class="navbar-text px-3 rounded me-3" style="background-color: #dce7f5;">
+            {{ request.user.first_name }} {{ request.user.last_name|first }}.
+          </span>
+
+          <ul class="navbar-nav">
             <li class="nav-item">
               <form action="#" method="post" class="d-inline">
                 {% csrf_token %}
-                <button type="submit" class="nav-link btn btn-link">
-                  {% trans 'Logout' %}
+                <button type="submit" class="nav-link btn btn-link p-0" style="text-decoration: none;">
+                  {% trans "Logout" %}
                 </button>
               </form>
             </li>
-
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="#">{% trans "Login" %}</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">{% trans "Registration" %}</a>
-            </li>
-            {% endif %}
           </ul>
         </div>
+        {% else %}
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#">{% trans "Login" %}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">{% trans "Registration" %}</a>
+          </li>
+        </ul>
+        {% endif %}
       </div>
-    </nav>
-
-    <div class="container wrapper flex-grow-1">
-      {% bootstrap_messages %}
-      {% block content %}
-      {% endblock %}
     </div>
+  </nav>
 
-    <footer>
-      <div class="container my-5 pt-4 border-top">
-        <a target="_blank" href="#">Expenzo bot</a>
-      </div>
-    </footer>
+  <div class="container wrapper flex-grow-1">
+    {% block content %}
+    {% endblock %}
+  </div>
+
+  <footer>
+    <div class="container my-5 pt-4 border-top">
+      <a target="_blank" href="#">Expenzo Bot</a>
+    </div>
+  </footer>
 
   </body>
 </html>
