--- a/expenzo/templates/base.html
+++ b/expenzo/templates/base.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">{% trans "Users" %}</a>
+            <a class="nav-link" href="{% url 'users:index' %}">{% trans "Users" %}</a>
           </li>
 
           {% if user.is_authenticated %}
@@ -52,7 +52,7 @@
 
           <ul class="navbar-nav">
             <li class="nav-item">
-              <form action="#" method="post" class="d-inline">
+              <form action="{% url 'users:logout' %}" method="post" class="d-inline">
                 {% csrf_token %}
                 <button type="submit" class="nav-link btn btn-link p-0" style="text-decoration: none;">
                   {% trans "Logout" %}
@@ -64,10 +64,10 @@
         {% else %}
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">{% trans "Login" %}</a>
+            <a class="nav-link" href="{% url 'users:login' %}">{% trans "Login" %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">{% trans "Registration" %}</a>
+            <a class="nav-link" href="{% url 'users:create' %}">{% trans "Registration" %}</a>
           </li>
         </ul>
         {% endif %}
