--- a/expenzo/templates/index.html
+++ b/expenzo/templates/index.html
@@ -9,7 +9,7 @@
         <div class="display-4">{% trans "Welcome to Expenzo!" %}</div>
         <p class="lead">{% trans "It helps you to keep track of your money" %}</p>
         <hr>
-        <a class="btn btn-primary btn-lg" href="">
+        <a class="btn btn-primary btn-lg" href="{% url 'expenses:create' %}">
             {% trans "Add new expense" %}
         </a>
 </div>
