feat: Add expenses app to base.html

--- a/expenzo/templates/base.html
+++ b/expenzo/templates/base.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="#">{% trans "Statistics" %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">{% trans "Expenses" %}</a>
+            <a class="nav-link" href="{% url 'expenses:index' %}">{% trans "Expenses" %}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">{% trans "Something else" %}</a>
