--- a/expenzo/templates/categories/delete.html
+++ b/expenzo/templates/categories/delete.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load i18n %}
 
-</body>
-</html>
+{% block content %}
+<div class="container">
+    <h1 class="my-4">{% trans "Delete category" %}</h1>
+
+    <div class="alert" role="alert">
+        {% blocktrans %}Are you sure you want to delete the category {{ task }}?{% endblocktrans %}
+    </div>
+
+    <form method="post">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-danger">{% trans "Yes, delete" %}</button>
+    </form>
+</div>
+{% endblock %}
