--- a/expenzo/templates/expenses/index.html
+++ b/expenzo/templates/expenses/index.html
@@ -34,7 +34,7 @@
             <button type="submit" class="btn btn-primary">
                 {% trans "Filter" %}
             </button>
-            <a href="{% url 'expenses:index' %}" class="btn btn-secondary">
+            <a href="{% url 'expenses:index' %}?reset=1" class="btn btn-secondary">
                 {% trans "Reset" %}
             </a>
         </div>
