--- a/expenzo/templates/sections/index.html
+++ b/expenzo/templates/sections/index.html
@@ -10,6 +10,8 @@
 
     <table class="table table-striped">
         <thead>
+            <link rel="stylesheet"
+                  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
             <tr>
                 <th class="col-1">ID</th>
                 <th class="col-5">{% trans "Name" %}</th>
@@ -23,10 +25,9 @@
                 <td class="col-1">{{ section.id }}</td>
                 <td class="col-5">{{ section.name }}</td>
                 <td class="col-1">{{ section.created_at|date:"d.m.Y" }}</td>
-                <td class="col-1">
-                    <a href="{% url 'sections:update' section.id %}">{% trans "Edit" %}</a>
-                    <br>
-                    <a href="{% url 'sections:delete' section.id %}">{% trans "Delete" %}</a>
+                <td class="col-1 text-nowrap">
+                    <a href="{% url 'sections:update' section.id %}"><i class="bi bi-pencil"></i></a>
+                    <a href="{% url 'sections:delete' section.id %}"><i class="bi bi-trash text-danger"></i></a>
                 </td>
             </tr>
         {% empty %}
@@ -36,5 +37,24 @@
         {% endfor %}
         </tbody>
     </table>
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.previous_page_number }}">Previous</a>
+          </li>
+        {% endif %}
+
+        <li class="page-item disabled">
+          <span class="page-link">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+        </li>
+
+        {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.next_page_number }}">Next</a>
+          </li>
+        {% endif %}
+      </ul>
+    </nav>
 </div>
 {% endblock %}
