--- a/expenzo/templates/users/index.html
+++ b/expenzo/templates/users/index.html
@@ -6,6 +6,8 @@
 <h1 class="my-4">{% trans "Users" %}</h1>
 <table class="table table_striped">
     <thead>
+    <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <tr>
         <th>ID</th>
         <th>{% trans "Username" %}</th>
@@ -20,13 +22,31 @@
         <td>{{ user.username }}</td>
         <td>{{ user.get_full_name }}</td>
         <td>{{ user.date_joined|date:"d.m.Y H:i" }}</td>
-        <td>
-            <a href="{% url 'users:update' user.id %}">{% trans "Edit" %}</a>
-            <br>
-            <a href="{% url 'users:delete' user.id %}">{% trans "Delete" %}</a>
+        <td class="col-1 text-nowrap">
+            <a href="{% url 'users:update' user.id %}"><i class="bi bi-pencil"></i></a>
+            <a href="{% url 'users:delete' user.id %}"><i class="bi bi-trash text-danger"></i></a>
         </td>
     </tr>
     {% endfor %}
     </tbody>
 </table>
+<nav aria-label="Page navigation">
+  <ul class="pagination justify-content-center">
+    {% if page_obj.has_previous %}
+      <li class="page-item">
+        <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.previous_page_number }}">Previous</a>
+      </li>
+    {% endif %}
+
+    <li class="page-item disabled">
+      <span class="page-link">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+    </li>
+
+    {% if page_obj.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.next_page_number }}">Next</a>
+      </li>
+    {% endif %}
+  </ul>
+</nav>
 {% endblock %}
