--- a/expenzo/templates/expenses/index.html
+++ b/expenzo/templates/expenses/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load i18n django_bootstrap5 %}
 {% load humanize %}
+{% load expense_tags %}
 
 {% block content %}
 <div class="container">
@@ -78,7 +79,7 @@
       <ul class="pagination justify-content-center">
         {% if page_obj.has_previous %}
           <li class="page-item">
-            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.previous_page_number }}">Previous</a>
+            <a class="page-link" href="?{% param_replace request page=page_obj.previous_page_number %}">Previous</a>
           </li>
         {% endif %}
 
@@ -88,7 +89,7 @@
 
         {% if page_obj.has_next %}
           <li class="page-item">
-            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.next_page_number }}">Next</a>
+            <a class="page-link" href="?{% param_replace request page=page_obj.next_page_number %}">Next</a>
           </li>
         {% endif %}
       </ul>
