--- a/expenzo/templates/sections/index.html
+++ b/expenzo/templates/sections/index.html
@@ -2,6 +2,7 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
 {% load i18n %}
+{% load expense_tags %}
 
 {% block content %}
 <div class="container wrapper flex-grow-1">
@@ -41,7 +42,7 @@
       <ul class="pagination justify-content-center">
         {% if page_obj.has_previous %}
           <li class="page-item">
-            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.previous_page_number }}">Previous</a>
+            <a class="page-link" href="?{% param_replace request page=page_obj.previous_page_number %}">Previous</a>
           </li>
         {% endif %}
 
@@ -51,7 +52,7 @@
 
         {% if page_obj.has_next %}
           <li class="page-item">
-            <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.next_page_number }}">Next</a>
+            <a class="page-link" href="?{% param_replace request page=page_obj.next_page_number %}">Next</a>
           </li>
         {% endif %}
       </ul>
