--- a/expenzo/templates/users/index.html
+++ b/expenzo/templates/users/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
 {% load i18n %}
+{% load expense_tags %}
 
 {% block content %}
 <h1 class="my-4">{% trans "Users" %}</h1>
@@ -34,7 +35,7 @@
   <ul class="pagination justify-content-center">
     {% if page_obj.has_previous %}
       <li class="page-item">
-        <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.previous_page_number }}">Previous</a>
+        <a class="page-link" href="?{% param_replace request page=page_obj.previous_page_number %}">Previous</a>
       </li>
     {% endif %}
 
@@ -44,7 +45,7 @@
 
     {% if page_obj.has_next %}
       <li class="page-item">
-        <a class="page-link" href="?{% if request.GET %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.next_page_number }}">Next</a>
+        <a class="page-link" href="?{% param_replace request page=page_obj.next_page_number %}">Next</a>
       </li>
     {% endif %}
   </ul>
